# abacus-develop

tests/: CMakeLists.txt
tests/deepks/: Autotest.sh  check_file
tests/deepks/603_NO_deepks_H2O_bandgap/: dm_eig.npy  e_base.npy  e_tot.npy  o_base.npy  o_tot.npy  orbital_precalc.npy
tests/deepks/603_NO_deepks_SiO2_bandgap_multik/: dm_eig.npy  e_base.npy  e_tot.npy  o_base.npy  o_tot.npy  orbital_precalc.npy
tests/integrate/107_PW_W90/: kpoints
tests/integrate/186_PW_KG_100/: Onsager.txt
tests/integrate/186_PW_SDOS_MALL/: kpoints
tests/integrate/212_NO_wfc_ienvelope/: kpoints
tests/integrate/283_NO_restart/: kpoints
tests/integrate/tools/: sum_BAND_CHG_H2  sum_BAND_CHG_H2_cube  sum_ENV_H2  sum_ENV_H2_cube
tests/test/: test.cpp
